# Mechvibes-SoundPack-Tools

./: .gitignore  README.md  README_CN.md  README_JP.md  main.py  pyproject.toml
docs/: sourcemap.md
mspt/: audio.py  cli.py  config.py  converters.py  io_utils.py  keycodes.py  models.py  pack.py  paths.py  rules.py  sourcemap.py
mspt/schema/: mechvibes_v1.py  mechvibes_v2.py  mvdx.py  v2.py
rule/: common.json  example.rule.json
tests/: test_converters.py  test_json5_loader.py
